# crippled-god

./: .gitignore  Cargo.toml  README.md  TODO.rtf
docs/: design.rtf  game-play.rtf
old-files/: TODO.rtf  crippled-god.toml
old-files/docs/: design.rtf  game-play.rtf
old-files/old-stuff/src/: main.rs
old-files/old-stuff/src/game/: color.rs  tile.rs
old-files/old-stuff/src/terminal/: render.rs
old-files/src/: terminal.rs
old-files/src/backend/: config.rs  internal.rs  mod.rs  scheduled.rs  size.rs
old-files/src/backend/internal/: entity.rs  flags.rs  level.rs  message.rs  size.rs  terrain.rs
old-files/src/terminal/: console.rs  map.rs  mod.rs  persist.rs  prompt.rs  run_loop.rs  view.rs
old-stuff/src/terminal/: mod.rs
older-files/old-stuff/: .mimsy.rtf  Cargo.toml
older-files/old-stuff/src/engine/: mod.rs
older-files/old-stuff/src/game/: terrain.rs
older-files/src/backend/: game.rs
src/: backend.rs  character.rs  level.rs  main.rs  npc.rs  npcs.rs  player.rs  terminal.rs
src/backend/: attributes.rs  character.rs  config.rs  entity.rs  flags.rs  game.rs  geography.rs  internal.rs  level.rs  location.rs  mod.rs  npc.rs  player.rs  pov.rs  rng.rs  scheduled.rs  size.rs  systems.rs  terrain.rs  vec2.rs  vec2d.rs
src/backend/internal/: character.rs  config.rs  entity.rs  flags.rs  level.rs  location.rs  message.rs  pov.rs  rng.rs  systems.rs  terrain.rs  time.rs  vec2d.rs
src/common/: errors.rs  mod.rs
src/core/: event.rs  events.rs  level.rs  level_generator.rs  mod.rs  point.rs  pov.rs  size.rs  store.rs  terrain.rs  time.rs  vec2d.rs
src/engine/: generate_open.rs  map.rs
src/game/: feature.rs  mod.rs  terrain.rs  tile.rs
src/level_generator/: main_branch.rs  mod.rs
src/terminal/: colors.rs  console.rs  map.rs  mod.rs  persist.rs  prompt.rs  raw.rs  render.rs  run_loop.rs  tile.rs  view.rs
