[package]
name = "crippled_god"
version = "0.1.0"
authors = ["Jesse Vorisek <jesse.vorisek@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"		# datetime library
dirs = "2.0.1"			# access to home, cache, and config directories
fnv = "1.0.6"			# deterministic hasher that is fast for small keys
serde = "1.0.92"		# serialization library
serde_derive = "1.0.92"	# serialize derive attributes
serde_json = "1.0.39"	# serialize as json
slog = "2.4.1"			# structured logging
slog-async = "2.3.0"	# asynchrous log writing
slog-term = "2.4.0"		# logging to a terminal/console/shell or other text based dest
structopt = "0.2.15"	# command line parser built on top of clap
termion = "1.5.2"		# terminal support
toml = "0.5.1"			# TOML parser
