[package]
name = "crippled_god"
version = "0.1.0"
authors = ["Jesse Vorisek <jesse.vorisek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.3"		# custom hasher that is much more performant for small keys