[package]
name = "crippled-god"
version = "0.1.0"
authors = ["Jesse Jones <jesse9jones@gmail.com>"]

[dependencies]
clap = "2.24.0"			# pretty nifty command line parser
log = "0.3.0"			# logging frontend
rand = "0.3.0"			# random number generator
simplelog = "0.4.0"		# logging backend
termion = "1.5.0"		# terminal library
time = "0.1.0"			# much better support for time than in std
